# dreamer

./: .gitignore  README.md  main.py  pyproject.toml  scratch.py
conf/: config.yaml  config_cartpole.yaml  config_cue_delay_choice.yaml  config_minigrid_memory.yaml
modules/: dreamer.py  env.py  models.py
modules/models/: README.md  actor.py  critic.py  world_model.py
modules/nn/: README.md  decoder.py  distributions.py  encoder.py  functions.py  losses.py  mlp.py  rnn.py  twohot.py  utils.py
modules/utils/: buffer.py  discrete_latent.py  env.py  twohot.py
src/: buffer.py  data.py  env.py  trainer.py  world_model.py
src/agent/: critic.py
src/config/: __init__.py  agent.py  buffer.py  dreamer.py  env.py  losses.py  nets.py  torch.py  training.py  twohot.py  utils.py  world_model.py
src/data/: buffer.py
src/env/: base.py  cue_delay_choice.py  factor.py  factory.py  minigrid.py  pixel.py  vector.py
src/loss/: actor_critic_loss.py  actor_loss.py  critic_loss.py  functions.py  reinforce_loss.py  world_model_loss.py
src/losses/: actor_critic.py  world_model.py
src/models/: actor.py  critic.py  world_model.py
src/nets/: README.md  activations.py  cnn.py  decoder.py  discrete_latent.py  encoder.py  functions.py  mlp.py  rnn.py  two_hot.py
src/nn/: discrete_latent.py  encoder.py  functions.py  losses.py  mlp.py
src/rl/: agent.py  critic.py  dreamer.py  multi_categorical.py  returns.py  world_model.py
src/training/: checkpoint.py  collector.py  evaluator.py  factory.py  metrics.py  (+1 more)
visualizations/: cartpole-eval.csv  cartpole-eval.py  cartpole.py
(+18 files in other folders)
