[project]
name = "dreamer"
version = "0.1.0"
description = "DreamerV3 implementation in PyTorch."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ale-py>=0.11.2",
    "array-api-compat>=1.14.0",
    "gymnasium[box2d,other]>=1.2.3",
    "hydra-core>=1.3.2",
    "numpy>=2.4.2",
    "pytest>=9.0.2",
    "torch>=2.10.0",
    "wandb>=0.25.1",
]
