[project]
name = "dreamer"
version = "0.1.0"
description = "DreamerV3 implementation in PyTorch."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ale-py>=0.11.2",
    "array-api-compat>=1.14.0",
    "gymnasium[box2d,other]>=1.2.3",
    "mlflow>=3.10.1",
    "numpy>=2.4.2",
    "nvidia-ml-py>=13.595.45",
    "psutil>=7.2.2",
    "pytest>=9.0.2",
    "torch>=2.10.0",
    "tyro>=1.0.13",
]
